home/Deployments/gogs/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-svc
  namespace: gogs-system
  labels:
    app: gogs-svc
spec:
  ports:
  - port: 3000
    name: web
  selector:
    app: gogs-app
