home/Deployments/gogs/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: gogs-system
  annotations:
    kubernetes.io/ingress.class: nginx-exposed
spec:
  rules:
  - host: repo.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs-svc
            port:
              number: 3000
